--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": ">=7.1.0",
         "topthink/framework": "6.0.*-dev",
-        "topthink/think-view": "^1.0"
+        "topthink/think-view": "^1.0",
+        "topthink/think-multi-app": "^1.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,5 +37,11 @@
             "@php think service:discover",
             "@php think vendor:publish"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
     }
 }
